--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -2,6 +2,18 @@
   "ConnectionStrings": {
     "HoistDb": "Server=localhost,1433;Database=HoistDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+  "SendGrid": {
+    "ApiKey": "<your-sendgrid-api-key>",
+    "FromEmail": "noreply@hoist.app",
+    "FromName": "Hoist"
+  },
+  "Google": {
+    "ClientId": "<your-google-client-id>"
+  },
+  "App": {
+    "BaseUrl": "https://localhost:5001",
+    "DeepLinkScheme": "hoist"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
